# Harbor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/src/: downloads.rs
crates/tray/: Cargo.toml
crates/tray/src/: main.rs
crates/tray/wix/: main.wxs
tools/: version.ps1
tools/installer/: setup.cmd
